backend/api/tests/integration/user/snapshots/integration__user__font__create.snap
---
source: tests/integration/user/font.rs
expression: body
---
{
  "names": [
    "ShesekRegular",
    "FrankRuhlMedium",
    "ArchitectsDaughterRegular",
    "RobotoSlabRegular",
    "CaveatMedium",
    "ComputerModernRegular"
  ]
}
