backend/api/tests/integration/user/snapshots/integration__user__font__delete.snap
---
source: tests/integration/user/font.rs
expression: body
---
{
  "names": [
    "ShesekRegular",
    "ArchitectsDaughterRegular",
    "RobotoSlabRegular",
    "CaveatMedium"
  ]
}
