backend/api/tests/integration/user/snapshots/integration__user__font__get_all.snap
---
source: tests/integration/user/font.rs
expression: body
---
{
  "names": [
    "ShesekRegular",
    "FrankRuhlMedium",
    "ArchitectsDaughterRegular",
    "RobotoSlabRegular",
    "CaveatMedium"
  ]
}
