backend/api/tests/integration/user/snapshots/integration__user__font__update.snap
---
source: tests/integration/user/font.rs
expression: body
---
{
  "names": [
    "ShesekRegular",
    "FrankRuhlMedium",
    "ArchitectsDaughterRegular",
    "ArialBlackRegular",
    "CaveatMedium"
  ]
}
